# RADAR_LIBRARY

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  ENHANCEMENT_SUMMARY.md  LICENSE  PHASE1_DEPLOYMENT_COMPLETE.md  README.md  debug_diagrams.py  fix_mermaid.py  fix_mermaid_advanced.py  paper_talk.md  requirements.txt  setup.py  test_mermaid.py  useful_codes.md  validate_mermaid.py
RADAR_LIBRARY/: requirements-dev.txt
RADAR_LIBRARY/.github/workflows/: ci.yml
awesome-radar-perception-main/: .gitignore  pyproject.toml
awesome-radar-perception-main/src/radar_perception/: __init__.py  signal_processing.py
awesome-radar-perception-main/tests/: test_signal_processing.py
docs/: README.md  advanced_signal_processing.md  advanced_signal_processing.md.backup  advanced_technologies.md  advanced_technologies.md.backup  ai_documentation_assistant.md  api_reference.md  api_reference.md.backup  architecture_diagrams.md  community_research_platform.md  datasets_and_benchmarks.md  datasets_and_benchmarks.md.backup  deep_learning_architectures.md  deep_learning_architectures.md.backup  ethics_and_responsible_ai.md  ethics_and_responsible_ai.md.backup  implementation_tutorial.md  implementation_tutorial.md.backup  industry_applications.md  industry_applications.md.backup  interactive_visualization.md  literature_review.md  literature_review.md.backup  performance_monitoring.md  phase1_implementation.md  research_gaps_and_architectures.md  research_gaps_and_architectures.md.backup  research_integration_platform.md
examples/: README.md  basic_pipeline.py
images/: image_placeholder.md
src/radar_perception/: __init__.py  datasets.py  detection.py  fusion.py  tracking.py  utils.py  visualization.py
